tests/good/reassign-global-var-local-scope.c
int global = 1;

int main()
{
    global = 2;
    return global;
}
