tests/bad/const.c
int main()
{
    const int i = 1;
    i = 2;
    return i;
}
